--- a/src/styles/css/main.css
+++ b/src/styles/css/main.css
@@ -146,7 +146,7 @@ main {
   background-color: #393E46;
   flex: 1;
   margin: 0 auto;
-  padding-bottom: 20px;
+  padding-bottom: 60px;
   height: 100%;
   width: 100%;
 }
@@ -364,6 +364,10 @@ review-container .review-container__button button {
 }
 
 footer {
+  position: fixed;
+  bottom: 0;
+  right: 0;
+  left: 0;
   height: 50px;
   padding: 16px;
   background-color: #222831;
@@ -394,8 +398,9 @@ footer foot-bar p {
 .like {
   font-size: 20px;
   position: fixed;
-  bottom: 16px;
+  bottom: 30px;
   right: 16px;
+  z-index: 90;
   background-color: #db0000;
   color: white;
   border: 0;
@@ -579,20 +584,20 @@ skeleton-detail .skeleton-detail__review .skeleton-detail__review__item .skeleto
   background-image: linear-gradient(90deg, rgba(255, 255, 255, 0), rgba(255, 255, 255, 0.5), rgba(255, 255, 255, 0));
   background-size: 40px 100%;
   background-repeat: no-repeat;
-  background-position: left -40px top 0;
+  background-position: left;
   -webkit-animation: 1s skeleton ease infinite;
           animation: 1s skeleton ease infinite;
 }
 
 @-webkit-keyframes skeleton {
   to {
-    background-position: right -40px top 0;
+    background-position: right;
   }
 }
 
 @keyframes skeleton {
   to {
-    background-position: right -40px top 0;
+    background-position: right;
   }
 }
 @media screen and (min-width: 600px) {
