--- a/src/styles/scss/main.scss
+++ b/src/styles/scss/main.scss
@@ -148,7 +148,7 @@
      background-color: $secondary-bg-color;
      flex: 1;
      margin: 0 auto;
-     padding-bottom: 20px;
+     padding-bottom: 60px;
      height: 100%;
      width: 100%;
      .content__hero {
@@ -366,6 +366,10 @@
  
  // Footer
  footer {
+    position: fixed;
+    bottom: 0;
+    right: 0;
+    left: 0;
      height: 50px;
      padding: 16px;
      background-color: $primary-bg-color;
@@ -398,8 +402,9 @@
  .like {
      font-size: 20px;
      position: fixed;
-     bottom: 16px;
+     bottom: 30px;
      right: 16px;
+     z-index: 90;
      background-color: #db0000;
      color: white;
      border: 0;
@@ -577,13 +582,13 @@ skeleton-list{
     background-image: linear-gradient(90deg, rgba(255, 255, 255,0), rgba(255, 255, 255,0.5), rgba(255, 255, 255,0));
     background-size: 40px 100%;
     background-repeat: no-repeat;
-    background-position: left -40px top 0;
+    background-position: left;
     animation: 1s skeleton ease infinite;
  }
 
  @keyframes skeleton {
     to {
-        background-position: right -40px top 0;
+        background-position: right;
     }
  }
 
